[project]
name = "tpms-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Kevin Marchais", email = "kevinmarchais@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "pyvista>=0.44.2",
    "trame>=3.7.6",
    "trame-vtk>=2.8.14",
    "trame-vuetify>=2.8.1",
]

[project.scripts]
tpms-gui = "tpms_gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
